--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon social solutions </title>
+    <title>Horiseon</title>
 </head>
 
 <body>
@@ -37,7 +37,7 @@
     <img class="hero-image" src="assets/images/digital-marketing-meeting.jpg" alt="Young digital marketing team having a meeting" ></img>
     
     <!-- main section of page -->
-    <main class="content">
+    <main>
 
         <!-- first article: search-engine-optimization -->
         <article class="search-engine-optimization">
@@ -69,31 +69,31 @@
     </main>
 
 
-    <div class="benefits">
-        <div class="benefit-lead">
+    <aside class="benefits">
+        <section class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
+        </section>
 
-        <div class="benefit-brand">
+        <section class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </div>
+        </section>
 
-        <div class="benefit-cost">
+        <section class="benefit-cost">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
-    </div>
+        </section>
+    </aside>
 
 
     <div class="footer">
