--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <main>
 
         <!-- first article: search-engine-optimization -->
-        <article class="search-engine-optimization">
+        <article id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="journal on table with seo brainstorm" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -49,7 +49,7 @@
         </article>
 
         <!-- second container: online-reputation-management -->
-        <article class="online-reputation-management">
+        <article id="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="presentation on laptop titled Reputation surrounded by graphs " />
             <h2>Online Reputation Management</h2>
             <p>
@@ -58,7 +58,7 @@
         </article>
         
         <!-- third container: social-media-marketing -->
-        <article  class="social-media-marketing">
+        <article  id="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="social media marketing group brainstorming at meeting " />
             <h2>Social Media Marketing</h2>
             <p>
@@ -72,7 +72,7 @@
     <aside class="benefits">
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
