--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     </main>
 
-
+        <!-- benifits aside  -->
     <aside class="benefits">
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -95,7 +95,7 @@
         </section>
     </aside>
 
-
+        <!-- footer of page -->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
