--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="icon" href="https://img.icons8.com/ios-filled/100/000000/h.png">
     <title>Horiseon</title>
 </head>
 
