--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="icon" href="https://img.icons8.com/ios-filled/100/000000/h.png">
+    <link rel="icon" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fcommons.wikimedia.org%2Fwiki%2FFile%3ANYCS-bull-trans-H.svg&psig=AOvVaw1Fuirk32ba4Awn-Tv7DCsI&ust=1614830295884000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCKjMvOidk-8CFQAAAAAdAAAAABAF">
     <title>Horiseon</title>
 </head>
 
